--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -30,7 +30,7 @@
                 <p><strong>{{ formation }}</strong></p>
 
                 <a href="{{ path('list_session', {id:formation.id}) }}">
-                    details
+                    <p>details</p>
                 </a>
             </div>
 
