--- a/templates/session/details.html.twig
+++ b/templates/session/details.html.twig
@@ -87,7 +87,7 @@
                         <p class="table-item">{{ programme.duration }} days</p>
 
                         <a href="{{ path('delete_programme', {id: programme.id}) }}" class="deleteIcon">
-                            <i class="fa-solid fa-xmark"></i>
+                            <i class="fa-solid fa-trash"></i>
                         </a>
                     </div>   
                 {% endfor %}
