--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -30,7 +30,7 @@
         </a>
 
         <a href="{{ path('delete_user', {id: user.id}) }}" class="deleteIcon">
-            <i class="fa-solid fa-xmark"></i>
+            <i class="fa-solid fa-trash"></i>
         </a>
     </div>
     {% endfor %}
