--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,60 +16,65 @@
     </head>
 
     <body>
-        {% block header %}
-        <header>
-            <nav>
-                <a href="{{ path('app_home') }}" class="nav-main">Home</a>
-    
-                {% if app.user %}
+        <div id="body-wrapper" class="light-mode">
+            {% block header %}
+            <header>
+                <nav>
+                    <a href="{{ path('app_home') }}" class="nav-main">Home</a>
+        
+                    {% if app.user %}
 
-                    <a href="{{ path('app_formation') }}"><i class="fa-solid fa-caret-right"></i> Formations</a>
-                                
-                    <a href="{{ path('app_session') }}"><i class="fa-solid fa-caret-right"></i> Sessions</a>
-                                
-                    <a href="{{ path('app_tag') }}"><i class="fa-solid fa-caret-right"></i> Tags and Modules</a>
-                
-                    <a href="{{ path('app_user') }}"><i class="fa-solid fa-caret-right"></i> Students</a>
+                        <a href="{{ path('app_formation') }}"><i class="fa-solid fa-caret-right"></i> Formations</a>
+                                    
+                        <a href="{{ path('app_session') }}"><i class="fa-solid fa-caret-right"></i> Sessions</a>
+                                    
+                        <a href="{{ path('app_tag') }}"><i class="fa-solid fa-caret-right"></i> Tags and Modules</a>
                     
-                    <div class="nav-main">
-                        <a href="{{ path('app_home') }}" class="nav-main">Profile</a>
-        
-                        <a href="{{ path('app_logout') }}" class="nav-main">Logout</a>
-                    </div>
+                        <a href="{{ path('app_user') }}"><i class="fa-solid fa-caret-right"></i> Students</a>
+                        
+                        <div class="nav-main">
+                            <a href="{{ path('app_home') }}" class="nav-main">Profile</a>
             
+                            <a href="{{ path('app_logout') }}" class="nav-main">Logout</a>
+                        </div>
+                
 
-                {% else %}
-                    <a href="{{ path('app_register') }}" class="nav-main">
-                        Register
-                    </a>
-    
-                    <a href="{{ path('app_login') }}" class="nav-main">
-                        Login
-                    </a>
-                {% endif %}
-            </nav>
-        </header>
-        {% endblock %}  
+                    {% else %}
+                        <a href="{{ path('app_register') }}" class="nav-main">
+                            Register
+                        </a>
         
-        <main>
-            <div id="wrapper" class="wrap-{% block pageWrapper %}{% endblock %}">
-                
-                {% block body %}{% endblock %}        
-                
-            </div>
-        </main>
+                        <a href="{{ path('app_login') }}" class="nav-main">
+                            Login
+                        </a>
+                    {% endif %}
+                    <button id="switch-mode">
+                        <i class="fa-solid fa-circle-half-stroke"></i>
+                    </button>
+                </nav>
+            </header>
+            {% endblock %}  
+            
+            <main>
+                <div id="wrapper" class="wrap-{% block pageWrapper %}{% endblock %}">
+                    
+                    {% block body %}{% endblock %}        
+                    
+                </div>
+            </main>
 
-        {% block footer %}
-        <footer>
+            {% block footer %}
+            <footer>
 
-        </footer>
-        {% endblock footer %} 
+            </footer>
+            {% endblock footer %} 
 
-        {% block javascripts %}
-            <script src="https://kit.fontawesome.com/3fb828feff.js" crossorigin="anonymous"></script>
-            <script src="{{ asset('app/app.js') }}"></script>
-            {# <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> #}
+            {% block javascripts %}
+                <script src="https://kit.fontawesome.com/3fb828feff.js" crossorigin="anonymous"></script>
+                <script src="{{ asset('app/app.js') }}"></script>
+                {# <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> #}
 
-        {% endblock %}
+            {% endblock %}
+        </div>
     </body>
 </html>
