--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -32,7 +32,7 @@
                 </a>
     
                 <a href="{{ path('delete_formation', {id: formation.id}) }}" class="deleteIcon">
-                    <i class="fa-solid fa-xmark"></i>
+                    <i class="fa-solid fa-trash"></i>
                 </a>
             </div>
 
