--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -26,10 +26,7 @@
     <div class="table-list">
 
         <div class="table-row table-header">
-            <p class="table-item">Title</p>
-            <p class="table-item">Dates</p>
-            <p class="table-item">nbPlace</p>
-            <p class="table-item">Formation</p>
+            <p class="table-item">Incoming Sessions</p>
         </div>
 
         {% for session in sessions %}
@@ -47,7 +44,35 @@
             </a>
 
             <a href="{{ path('delete_session', {id: session.id}) }}" class="deleteIcon">
-                <i class="fa-solid fa-xmark"></i>
+                <i class="fa-solid fa-trash"></i>
+            </a>
+        </div>  
+        {% endfor %}
+
+    </div>
+
+    <div class="table-list">
+
+        <div class="table-row table-header">
+            <p class="table-item">Passed Sessions</p>
+        </div>
+
+        {% for session in passed %}
+        <div class="table-row">
+            <a href="{{ path('details_session', {id: session.id}) }}" class="table-item ">
+                {{ session }}
+            </a>
+            
+            <p class="table-item">{{ session.showDates }}</p>
+            <p class="table-item">{{ session.nbPlace }}</p>
+            <p class="table-item">{{ session.Formation }}</p>
+
+            <a href="{{ path('update_session', {id: session.id}) }}">
+                <i class="fa-solid fa-pen-to-square"></i>
+            </a>
+
+            <a href="{{ path('delete_session', {id: session.id}) }}" class="deleteIcon">
+                <i class="fa-solid fa-trash"></i>
             </a>
         </div>  
         {% endfor %}
