--- a/templates/session/listByFormation.html.twig
+++ b/templates/session/listByFormation.html.twig
@@ -45,7 +45,7 @@
                 </a>
 
                 <a href="{{ path('delete_formation', {id: formation.id}) }}">
-                    <i class="fa-solid fa-xmark  "></i>
+                    <i class="fa-solid fa-trash  "></i>
                 </a>
             </div>
             {% endfor %}
