--- a/templates/user/details.html.twig
+++ b/templates/user/details.html.twig
@@ -20,7 +20,7 @@
         </a>
 
         <a href="" class="deleteIcon">
-            <i class="fa-solid fa-xmark  "></i>
+            <i class="fa-solid fa-trash  "></i>
         </a>
     </div>
     <div class="table-free">
