--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,20 +3,22 @@
     <head>
         
         <meta charset="UTF-8">
+        <meta name="color-scheme" content="light dark">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="{% block metadesc %}{% endblock %}">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        {% block javascript %}
+            
+        {% endblock javascript %}
         {% block stylesheets %}
             <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
             {# <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> #}
             <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         {% endblock %}
-
-
     </head>
 
     <body>
-        <div id="body-wrapper" class="light-mode">
+        <div id="body-wrapper" class="dark-mode">
             {% block header %}
             <header>
                 <nav>
@@ -70,10 +72,8 @@
             {% endblock footer %} 
 
             {% block javascripts %}
-                <script src="https://kit.fontawesome.com/3fb828feff.js" crossorigin="anonymous"></script>
                 <script src="{{ asset('app/app.js') }}"></script>
-                {# <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> #}
-
+                <script src="https://kit.fontawesome.com/3fb828feff.js" crossorigin="anonymous"></script>
             {% endblock %}
         </div>
     </body>
