fixed spelling mistake "nb_place" to "nb_spot"

--- a/templates/programme/create.html.twig
+++ b/templates/programme/create.html.twig
@@ -23,7 +23,7 @@
 
             {{ form_row(updateProgrammeForm.Formation) }}
             {{ form_row(updateProgrammeForm.title) }}
-            {{ form_row(updateProgrammeForm.nb_place) }}
+            {{ form_row(updateProgrammeForm.nb_slot) }}
             {{ form_row(updateProgrammeForm.dateStart) }}
             {{ form_row(updateProgrammeForm.dateEnd) }}
         
