--- a/templates/session/create.html.twig
+++ b/templates/session/create.html.twig
@@ -23,7 +23,7 @@
 
             {{ form_row(createSessionForm.Formation) }}
             {{ form_row(createSessionForm.title) }}
-            {{ form_row(createSessionForm.nb_place) }}
+            {{ form_row(createSessionForm.nb_slot) }}
             {{ form_row(createSessionForm.dateStart) }}
             {{ form_row(createSessionForm.dateEnd) }}
         
