--- a/templates/session/details.html.twig
+++ b/templates/session/details.html.twig
@@ -33,18 +33,18 @@
 
         <div class="table-section">
             <div class="info-place-left">
-                <b>Places left</b> 
-                <p>{{ session.nbPlace }}</p>
+                <b>Free Slot</b> 
+                <p>{{ session.slotFree }}</p>
             </div>
 
             <div class="info-place-taken">       
-                <b>Places taken</b> 
-                <p>{{ session.nbPlace }}</p>
+                <b>Slot taken</b> 
+                <p>{{ session.slotTaken }}</p>
             </div>
 
             <div class="info-place-total">   
-                <b>Total places</b> 
-                <p>{{ session.nbPlace }}</p>
+                <b>Total Slot</b> 
+                <p>{{ session.nbSlot }}</p>
             </div>
 
         </div>
