--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -36,7 +36,7 @@
             </a>
             
             <p class="table-item">{{ session.showDates }}</p>
-            <p class="table-item">{{ session.nbPlace }}</p>
+            <p class="table-item">{{ session.nbSlot }}</p>
             <p class="table-item">{{ session.Formation }}</p>
 
             <a href="{{ path('update_session', {id: session.id}) }}">
@@ -64,7 +64,7 @@
             </a>
             
             <p class="table-item">{{ session.showDates }}</p>
-            <p class="table-item">{{ session.nbPlace }}</p>
+            <p class="table-item">{{ session.nbSlot }}</p>
             <p class="table-item">{{ session.Formation }}</p>
 
             <a href="{{ path('update_session', {id: session.id}) }}">
