--- a/templates/session/update.html.twig
+++ b/templates/session/update.html.twig
@@ -26,7 +26,7 @@
         {{ form_row(updateSessionForm.Formation) }}
         {{ form_row(updateSessionForm.dateStart) }}
         {{ form_row(updateSessionForm.dateEnd) }}
-        {{ form_row(updateSessionForm.nb_place) }}
+        {{ form_row(updateSessionForm.nb_slot) }}
 
         <button type="submit" class="form-btn-submit" >Submit</button>
     {{ form_end(updateSessionForm) }}
