--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,6 +68,8 @@ b {
 
     --primary-background: #131E1C;
     --secondary-background: #0A2E27;
+    
+    --shadow:rgba(85, 85, 92, 0.25) 0px 3px 7px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 .light-mode {
@@ -81,6 +83,8 @@ b {
     
     --primary-background: #EFEFEF;
     --secondary-background: #FEFEFE;
+
+    --shadow:rgba(50, 50, 93, 0.25) 0px 3px 7px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 #switch-mode {
@@ -175,8 +179,8 @@ nav a:not(.nav-main) {
 .table-list {
     display: flex; 
     flex-direction: column; 
-    border-radius: 8px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 3px 7px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    border-radius: 4px;
+    box-shadow: var(--shadow);
 }
 
 .table-item {
@@ -196,7 +200,9 @@ nav a:not(.nav-main) {
 
     background-color: var(--secondary-background);
 
-    border-radius: 8px;
+    border-radius: 4px;
+
+    box-shadow: var(--shadow);
 }
 
 .table-row {
@@ -224,6 +230,7 @@ nav a:not(.nav-main) {
     background-color: var(--secondary-background);
 
     position: relative;
+    box-shadow: var(--shadow);
 }
 
 .table-section {
@@ -258,15 +265,15 @@ nav a:not(.nav-main) {
 .table-row:first-child, 
 .table-free:first-child, 
 .table-section:first-child {
-    border-top-left-radius: 8px ;
-    border-top-right-radius: 8px ;
+    border-top-left-radius: 4px ;
+    border-top-right-radius: 4px ;
 }
 
 .table-row:last-child, 
 .table-free:last-child, 
 .table-section:last-child  {
-    border-bottom-left-radius: 8px ;
-    border-bottom-right-radius: 8px ;
+    border-bottom-left-radius: 4px ;
+    border-bottom-right-radius: 4px ;
 }
 
 .table-row:not(:last-child, :first-child), 
@@ -539,7 +546,7 @@ div input[type=checkbox] {
 
     text-align: center;
     color: var(--primary-color-text);
-    border-radius: 5px;
+    border-radius: 4px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 3px 7px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
     transition: 0.4s;
@@ -557,7 +564,7 @@ div input[type=checkbox] {
 .home-formation-items a {
     width: 100px;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 4px;
 
     margin-bottom: 8px;
 
