--- a/templates/session/listByFormation.html.twig
+++ b/templates/session/listByFormation.html.twig
@@ -38,7 +38,7 @@
                 </a>
                 
                 <p class="table-item">{{ session.showDates }}</p>
-                <p class="table-item">{{ session.nbPlace }}</p>
+                <p class="table-item">{{ session.nbSlot }}</p>
 
                 <a href="{{ path('update_session', {id: session.id}) }}">
                     <i class="fa-solid fa-pen-to-square"></i>
