--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,7 +33,6 @@ body {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
 }
 
-
 main {
     flex: 5;
 }
@@ -75,16 +74,17 @@ b {
 .light-mode {
     --primary-color: #e4e2e2;
     
-    --primary-color-text: #464646;
-    --secondary-color-text: #434343;
+    --primary-color-text: #3d3d3d;
+    --secondary-color-text: #2c2c2c;
 
-    --hover-color: #20a38b;
-    --active-color:#12574a;
+    --hover-color: #bbbbbb;
+    --active-color:#505050;
     
     --primary-background: #EFEFEF;
     --secondary-background: #FEFEFE;
 
     --shadow:rgba(50, 50, 93, 0.25) 0px 3px 7px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    --shadow-hover:rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;;
 }
 
 #switch-mode {
@@ -209,6 +209,8 @@ nav a:not(.nav-main) {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 
     text-align: center;
 
@@ -285,6 +287,10 @@ nav a:not(.nav-main) {
     background-color: var(--primary-color);
 }
 
+.table-header:hover {
+    background-color: var(--primary-color);
+}
+
 .table-header > .table-item {
     font-size: var(--font-size-title);
     font-weight: var(--weight-bold);
@@ -329,7 +335,9 @@ nav a:not(.nav-main) {
 
     position: absolute;
     top: 25%;
-    right: 10px;
+    right: 40px;
+
+    cursor: pointer;
 } 
 
 
@@ -555,13 +563,14 @@ div input[type=checkbox] {
     text-align: center;
     color: var(--primary-color-text);
     border-radius: 4px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 3px 7px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    box-shadow: var(--shadow);
 
     transition: 0.4s;
 }
 
 .home-formation-items:hover {
     transform: translateY(-5px);
+    box-shadow: var(--shadow-hover);
     transition: 0.4s;
 }
 
@@ -590,7 +599,19 @@ div input[type=checkbox] {
 #wrapper .home-formation-container .home-formation-items a:hover {
     background-color: var(--hover-color);
     color: var(--secondary-color-text);
+}
 
+/************************* indexSession ************************/
+/***************************************************************/
+#passed-sessions-head {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.passed-sessions-content {
+    display: none;
+
+    transform: translateY(0);
 }
 
 /************************* detailsSession ************************/
