--- a/templates/session/details.html.twig
+++ b/templates/session/details.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-    <h2 class="secondary title">Details of the session</h2>
+    <h2 class="secondary-title">Details of the session</h2>
     <h1 class="primary-title">{{ session }}</h1>
     
     {# read and display all flash messages #}
