--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,13 +26,13 @@
         
                     {% if app.user %}
 
-                        <a href="{{ path('app_formation') }}"><i class="fa-solid fa-caret-right"></i> Formations</a>
+                        <a href="{{ path('app_formation') }}"><i class="fa-solid fa-caret-right"></i>&nbsp;Formations</a>
                                     
-                        <a href="{{ path('app_session') }}"><i class="fa-solid fa-caret-right"></i> Sessions</a>
+                        <a href="{{ path('app_session') }}"><i class="fa-solid fa-caret-right"></i>&nbsp;Sessions</a>
                                     
-                        <a href="{{ path('app_tag') }}"><i class="fa-solid fa-caret-right"></i> Tags and Modules</a>
+                        <a href="{{ path('app_tag') }}"><i class="fa-solid fa-caret-right"></i>&nbsp;Tags&nbsp;&&nbsp;Modules</a>
                     
-                        <a href="{{ path('app_user') }}"><i class="fa-solid fa-caret-right"></i> Students</a>
+                        <a href="{{ path('app_user') }}"><i class="fa-solid fa-caret-right"></i>&nbsp;Students</a>
                         
                         <div class="nav-main">
                             <a href="{{ path('app_home') }}" class="nav-main">Profile</a>
@@ -40,7 +40,6 @@
                             <a href="{{ path('app_logout') }}" class="nav-main">Logout</a>
                         </div>
                 
-
                     {% else %}
                         <a href="{{ path('app_register') }}" class="nav-main">
                             Register
@@ -50,6 +49,7 @@
                             Login
                         </a>
                     {% endif %}
+
                     <button id="switch-mode">
                         <i class="fa-solid fa-circle-half-stroke"></i>
                     </button>
