Update edit & delete icon

--- a/templates/user/details.html.twig
+++ b/templates/user/details.html.twig
@@ -16,11 +16,11 @@
         <h2>Personal information</h1>
 
         <a href="">
-            <i class="fa-solid fa-pen-to-square"></i>
+            <i class="fa-regular fa-pen-to-square"></i>
         </a>
 
         <a href="" class="deleteIcon">
-            <i class="fa-solid fa-trash  "></i>
+            <i class="fa-regular fa-trash-can  "></i>
         </a>
     </div>
     <div class="table-free">
