--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,7 @@
 /************************* General *************************/
 /***********************************************************/
 :root {
-    --danger-color: #9C1414;
-    --alert-color:#C07300;
+    --danger-color: #ac1a1a;
 
     --font-size-big: 35px;
     --font-size-title: 22px;
@@ -70,6 +69,9 @@ b {
     
     --shadow:rgba(0, 129, 105, 0.527) 0px 3px 7px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     --shadow-hover:rgba(1, 131, 107, 0.39) 0px 10px 23px -5px, rgba(0, 0, 0, 0.3) 0px 8px 12px -8px;
+
+    --alert-color:#d3d3d3;
+
 }
 
 .light-mode {
@@ -86,6 +88,9 @@ b {
 
     --shadow:rgba(50, 50, 93, 0.25) 0px 3px 7px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     --shadow-hover:rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+
+    --alert-color:#2b2b2b;
+
 }
 
 #switch-mode {
@@ -301,7 +306,7 @@ nav a:not(.nav-main) {
 /* edit btn */
 .fa-pen-to-square { 
     font-size: 22px;
-
+    
     color: var(--alert-color);
     border: none;
     border-radius: 50%;
@@ -312,7 +317,7 @@ nav a:not(.nav-main) {
 }
 
 /* delete btn */
-.fa-trash {
+.fa-trash-can {
     font-size: 23px;
 
     color: var(--danger-color);
