--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -28,11 +28,11 @@
                 </a>
                 {# later nb sessions will be put #}
                 <a href="{{ path('update_formation', {id: formation.id}) }}">
-                    <i class="fa-solid fa-pen-to-square"></i>
+                    <i class="fa-regular fa-pen-to-square"></i>
                 </a>
     
                 <a href="{{ path('delete_formation', {id: formation.id}) }}" class="deleteIcon">
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-regular fa-trash-can"></i>
                 </a>
             </div>
 
