--- a/templates/session/listByFormation.html.twig
+++ b/templates/session/listByFormation.html.twig
@@ -28,12 +28,12 @@
         <div class="table-row table-header">
             <p class="table-item">Title</p>
             <p class="table-item">Dates</p>
-            <p class="table-item">Places</p>
+            <p class="table-item">Slots</p>
         </div>
 
         {% if formation.sessions|length > 0 %}
 
-            {% for session in formation.sessions %}
+            {% for session in formation.sessions|sort((b, a) => a.dateStart <=> b.dateStart) %}
             <div class="table-row">
                 <a href="{{ path('details_session', {id: session.id}) }}" class="table-item">
                     {{ session }}
@@ -43,11 +43,11 @@
                 <p class="table-item">{{ session.nbSlot }}</p>
 
                 <a href="{{ path('update_session', {id: session.id}) }}">
-                    <i class="fa-solid fa-pen-to-square"></i>
+                    <i class="fa-regular fa-pen-to-square"></i>
                 </a>
 
                 <a href="{{ path('delete_formation', {id: formation.id}) }}">
-                    <i class="fa-solid fa-trash  "></i>
+                    <i class="fa-regular fa-trash-can"></i>
                 </a>
             </div>
             {% endfor %}
