--- a/templates/tag/index.html.twig
+++ b/templates/tag/index.html.twig
@@ -29,11 +29,11 @@
                 <h2 class="table-item">{{ tag }}</h2>
 
                 <a href="{{ path('update_tag', {id:tag.id}) }}">
-                    <i class="fa-solid fa-pen-to-square"></i>
+                    <i class="fa-regular fa-pen-to-square"></i>
                 </a>
                 
                 <a href="{{ path('delete_tag', {id: tag.id}) }}" class="deleteIcon">
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-regular fa-trash-can"></i>
                 </a>
             </div>
 
@@ -44,11 +44,11 @@
                         <p class="table-item">{{ module }}</p>
 
                         <a href="{{ path('update_module', {id:module.id}) }}">
-                            <i class="fa-solid fa-pen-to-square"></i>
+                            <i class="fa-regular fa-pen-to-square"></i>
                         </a>
             
                         <a href="{{ path('delete_module', {id:module.id}) }}" class="deleteIcon">
-                            <i class="fa-solid fa-trash"></i>
+                            <i class="fa-regular fa-trash-can"></i>
                         </a>
                     </div>
                 {% endfor %}
