--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -26,11 +26,11 @@
         <p class="table-item">{{ user.city }}</p>
 
         <a href="{{ path('update_user', {id: user.id}) }}">
-            <i class="fa-solid fa-pen-to-square"></i>
+            <i class="fa-regular fa-pen-to-square"></i>
         </a>
 
         <a href="{{ path('delete_user', {id: user.id}) }}" class="deleteIcon">
-            <i class="fa-solid fa-trash"></i>
+            <i class="fa-regular fa-trash-can"></i>
         </a>
     </div>
     {% endfor %}
