--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,7 @@ b {
 .dark-mode {
     --primary-color: #1F816F;
     
-    --primary-color-text: #29c7aa;
+    --primary-color-text: #26D9B8;
     --secondary-color-text: #ffffff;
 
     --hover-color: #20a38b;
@@ -67,8 +67,11 @@ b {
     --primary-background: #131E1C;
     --secondary-background: #0A2E27;
     
-    --shadow:rgba(0, 129, 105, 0.527) 0px 3px 7px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-    --shadow-hover:rgba(1, 131, 107, 0.39) 0px 10px 23px -5px, rgba(0, 0, 0, 0.3) 0px 8px 12px -8px;
+    /* --shadow:rgba(0, 207, 173, 0.527) 0px 3px 7px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    --shadow-hover:rgba(0, 211, 172, 0.39) 0px 10px 23px -5px, rgba(0, 0, 0, 0.3) 0px 8px 12px -8px; */
+
+    --shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    --shadow-hover: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
     --alert-color:#d3d3d3;
 
@@ -525,14 +528,14 @@ div input[type=checkbox] {
 
 .create-entities a {
     font-size: 18px;
-    color: var(--primary-color-text);
+    color: var(--secondary-color-text);
     text-decoration: none;
     transition: 0.3s;
 }
 
 .create-entities a:hover {
     /* font-size: 21px; */
-    color: var(--secondary-color-text);
+    color: var(--primary-color-text);
     transition: 0.3s;
 }
 
@@ -553,7 +556,7 @@ div input[type=checkbox] {
     justify-content: space-evenly;
 
     background-color: var(--secondary-background);
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--secondary-background);
 
     text-align: center;
     color: var(--primary-color-text);
