--- a/public/css/style.css
+++ b/public/css/style.css
@@ -147,6 +147,14 @@ nav a:not(.nav-main) {
     transition: 0.3s;
 }
 
+nav #burger-btn {
+    font-size: 22px;
+    border: none;
+    background: none;
+
+    display: none;
+}
+
 /************************* Wrapper ***************************/
 /*************************************************************/
 #wrapper {
@@ -214,7 +222,6 @@ nav a:not(.nav-main) {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    flex-wrap: wrap;
 
     text-align: center;
 
@@ -660,15 +667,21 @@ div input[type=checkbox] {
 /********************************************************************/
 @media only screen
 and (max-device-width : 768px) {
-    /* body {
-        background-color: var(--primary-color-text);
+
+    #body-wrapper {
+        background-color: var(--primary-background);
     
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+    
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+
+        min-height: 100vh;
+        height: 100%;
     }
     
     main {
-        flex: 5;
+        flex: initial;
     }
     
     .primary-title {
@@ -686,45 +699,252 @@ and (max-device-width : 768px) {
     b {
         font-weight: var(--weight-black);
         font-size: 18px;
-    } */
-    
+    }
+
+    /************************* Wrapper ***************************/
+    /*************************************************************/
+    #wrapper {
+        padding: 0 1%;
+        
+    }
+
     /************************* Header *************************/
     /**********************************************************/
-    /* nav {
-        width: 250px;
-        min-height: 100vh;
-        height: 100%;
+    nav {
+        min-height: initial;
+        height: initial;
         
-        flex: 0.5;
-        display: flex;
-        flex-direction: column;
-    
-        background-color: var(--secondary-background);
+        flex: initial;
+        flex-direction: row;
     }
-    
-    nav a {
-        padding: 0 25px ;
-        text-decoration: none;
-        color: var(--secondary-color-text);
+
+    nav a:first-child {
+        align-self: center;
     }
     
     nav .nav-main {
-        font-size: 25px;
-        font-weight: var(--weight-bold);
-        margin: 25px 0 20px;  
-        transition: 0.3s;
-    }
-    
-    nav a:hover {
-        color: var(--primary-color-text);
-        transition: 0.3s;
+        margin: 10px;  
+        flex-direction: row;
     }
     
     nav a:not(.nav-main) {
-        font-size: 20px;
-        margin: 5px 0;
-        transition: 0.3s;
+        display: none;
+        margin: 10px;
+    }
+
+    nav .fa-caret-right {
+        display: none;
+    }
+
+    nav #burger-btn {
+        display: initial;
+    }
+
+    /************************ HomePage ************************/
+    /**********************************************************/
+    .create-entities {
+        height: initial;      
+        margin: 0;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .create-entities a {
+        padding: 5px 10px;
+
+        color: var(--secondary-color-text);
+        font-size: 18px;
+        text-decoration: none;
+        background-color: var(--secondary-background);
+
+        border-radius: 3px;
+        box-shadow: var(--shadow);
+
+        transition: none;
+    }
+    
+    .create-entities a:hover {
+        color: var(--secondary-color-text);
+        box-shadow: var(--shadow);
+        transition: none;
+    }
+
+    .home-formation-container {
+        padding-top: 10px;
+        grid-template-columns: 100%;
+    }
+    
+    .home-formation-items:hover {
+        transform: translateY(0);
+        box-shadow: var(--shadow);
+    }
+
+    /************************* Table ***************************/
+    /***********************************************************/
+    .table-list {
+        display: flex; 
+        flex-direction: column; 
+        border-radius: 4px;
+        box-shadow: var(--shadow);
+    }
+
+    .table-item {
+        padding: 0.75rem 0;
+        font-size: var(--font-size-p);
+        color: var(--secondary-color-text);
+
+        flex: 1;
+    }
+
+    .row-unique {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+
+        text-align: center;
+
+        background-color: var(--secondary-background);
+
+        border-radius: 4px;
+
+        box-shadow: var(--shadow);
+    }
+
+    .table-row {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+
+        text-align: center;
+
+        background-color: var(--secondary-background);
+        position: relative;
+    }
+
+    .table-row:hover {
+        background-color: var(--hover-background);
+        transition: 0.5s;
+    }
+
+    .table-free {
+        padding: 0 15%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+
+        background-color: var(--secondary-background);
+
+        position: relative;
+        box-shadow: var(--shadow);
+    }
+
+    .table-section {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+
+        background-color: var(--secondary-background);
+
+        position: relative;
+    }
+
+    .table-section:not(:nth-child(3)) {
+        display: flex;
+        flex-direction: column;
+
+        position: relative;
+    }
+
+    .table-section div {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+
+        text-align: center;
+    }
+
+    .table-section p, .table-section strong {
+        text-align: center;
+    }
+
+    .table-row:first-child, 
+    .table-free:first-child, 
+    .table-section:first-child {
+        border-top-left-radius: 4px ;
+        border-top-right-radius: 4px ;
+    }
+
+    .table-row:last-child, 
+    .table-free:last-child, 
+    .table-section:last-child  {
+        border-bottom-left-radius: 4px ;
+        border-bottom-right-radius: 4px ;
+    }
+
+    .table-row:not(:last-child, :first-child), 
+    .table-section:not(:last-child, :first-child) {
+        border-bottom: 1px solid var(--primary-color);
+    }
+
+    .table-header {
+        height: 35px;
+        background-color: var(--primary-color);
+    }
+
+    .table-header:hover {
+        background-color: var(--primary-color);
+    }
+
+    .table-header > .table-item {
+        font-size: var(--font-size-title);
+        font-weight: var(--weight-bold);
+    }
+
+    /* .table-row a {
+        position: absolute;
+        top: 25%;
+        right: 50px;
     } */
+
+    /* edit btn */
+    .fa-pen-to-square { 
+        font-size: 22px;
+        
+        color: var(--alert-color);
+        border: none;
+        border-radius: 50%;
+
+        position: absolute;
+        top: 25%;
+        right: 50px;
+    }
+
+    /* delete btn */
+    .fa-trash-can {
+        font-size: 23px;
+
+        color: var(--danger-color);
+        border: none;
+        border-radius: 50%;
+
+        position: absolute;
+        top: 25%;
+        right: 10px;
+    }
+
+    .fa-chevron-up, .fa-chevron-down {
+        font-size: 23px;
+
+        color: var(--secondary-color-text);
+
+        position: absolute;
+        top: 25%;
+        right: 40px;
+
+        cursor: pointer;
+    } 
+
 }
 
 /****************************** Phone ******************************/
