--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,10 +107,48 @@ b {
     font-size: 20px;
 }
 
+
+
+/************************* Wrapper ***************************/
+/*************************************************************/
+#wrapper {
+    margin: 25px 0;
+    padding: 0 3%;
+    color: var(--secondary-color-text);
+}
+
+#wrapper a {
+    text-decoration: none;
+}
+
+#wrapper input:focus-visible,
+#wrapper select:focus-visible {
+    outline: none;
+}
+
+/* grid */
+[class*="wrap-"] {
+    display: grid;
+
+    row-gap: 15px;
+    column-gap: 15px;
+
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+}
+
+#wrapper .flash-success {
+    color: rgb(24, 173, 24);
+}
+
+#wrapper .flash-error {
+    color: var(--danger-color);
+}
+
 /************************* Header *************************/
 /**********************************************************/
 nav {
-    min-height: 100vh;
+    min-height: 98vh;
     height: 100%;
     
     flex: 1;
@@ -118,6 +156,7 @@ nav {
     flex-direction: column;
 
     background-color: var(--secondary-background);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 nav a, nav button {
@@ -155,36 +194,6 @@ nav #burger-btn {
     display: none;
 }
 
-/************************* Wrapper ***************************/
-/*************************************************************/
-#wrapper {
-    margin: 25px 0;
-    padding: 0 3%;
-    color: var(--secondary-color-text);
-}
-
-#wrapper a {
-    text-decoration: none;
-}
-
-#wrapper input:focus-visible {
-    outline: none;
-}
-
-#wrapper select:focus-visible {
-    outline: none;
-}
-
-/* grid */
-[class*="wrap-"] {
-    display: grid;
-
-    row-gap: 15px;
-    column-gap: 15px;
-
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-}
 
 /************************* Table ***************************/
 /***********************************************************/
@@ -196,7 +205,7 @@ nav #burger-btn {
 }
 
 .table-item {
-    padding: 0.75rem 0;
+    padding: 0.5em 0;
     font-size: var(--font-size-p);
     color: var(--secondary-color-text);
 
@@ -229,9 +238,22 @@ nav #burger-btn {
     position: relative;
 }
 
+.table-item:not(:first-child) {
+    border-left: 1px solid var(--primary-color);
+}
+
+.wrap-details-user .table-list .table-item:not(:first-child) {
+    border: 0;
+}
+
 .table-row:hover {
     background-color: var(--hover-background);
-    transition: 0.5s;
+    transition: 0.3s;
+}
+
+.table-row:hover a {
+    color: var(--primary-color-text);
+    transition: 0.3s;
 }
 
 .table-free {
@@ -243,7 +265,6 @@ nav #burger-btn {
     background-color: var(--secondary-background);
 
     position: relative;
-    box-shadow: var(--shadow);
 }
 
 .table-section {
@@ -307,12 +328,6 @@ nav #burger-btn {
     font-weight: var(--weight-bold);
 }
 
-/* .table-row a {
-    position: absolute;
-    top: 25%;
-    right: 50px;
-} */
-
 /* edit btn */
 .fa-pen-to-square { 
     font-size: 22px;
@@ -341,13 +356,10 @@ nav #burger-btn {
 
 .fa-chevron-up, .fa-chevron-down {
     font-size: 23px;
-
     color: var(--secondary-color-text);
-
     position: absolute;
     top: 25%;
     right: 40px;
-
     cursor: pointer;
 } 
 
@@ -386,15 +398,6 @@ nav #burger-btn {
 
     padding: 0 10px ;
 }
-
-.form-input-text { /* input text / number */
-    
-}
-
-.form-input-date { /* date / dateTime */
-
-}
-
 
 .form-create div { /* affect all div that doesn't have a date input */
     grid-column: 1 / 5;
@@ -441,7 +444,8 @@ div input[type=checkbox] {
     padding: 0 15%;
 }
 
-.wrap-register .form-create { /* input text / number */
+/* input text / number */
+.wrap-register .form-create { 
     display: grid;
 
     grid-template-columns:  auto;
@@ -513,7 +517,6 @@ div input[type=checkbox] {
 
 .wrap-details-session #table-information {
     grid-column: 1 / span 5;
-    /* grid-row: 4 / span 2 ; */
 }
 
 .wrap-details-session #table-formation-module {
@@ -531,9 +534,11 @@ div input[type=checkbox] {
     margin-bottom: 15px ;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .create-entities a {
+    width: fit-content;
     font-size: 18px;
     color: var(--secondary-color-text);
     text-decoration: none;
@@ -541,7 +546,6 @@ div input[type=checkbox] {
 }
 
 .create-entities a:hover {
-    /* font-size: 21px; */
     color: var(--primary-color-text);
     transition: 0.3s;
 }
@@ -654,17 +658,15 @@ div input[type=checkbox] {
 
 .wrap-list-session a:hover {
     color: var(--primary-color-text);
-
     transition: 0.3s;
-
 }
 
-/**********************************************************************************/
-/*********************************** Responsive ***********************************/
-/**********************************************************************************/
+/********************************************************************************************************************************************************/
+/********************************************************************** Responsive **********************************************************************/
+/********************************************************************************************************************************************************/
 
-/****************************** Tablet ******************************/
-/********************************************************************/
+/************************************************************ Tablet ************************************************************/
+/********************************************************************************************************************************/
 @media only screen
 and (max-device-width : 768px) {
 
@@ -747,10 +749,12 @@ and (max-device-width : 768px) {
         margin: 0;
         flex-direction: row;
         justify-content: space-between;
+        flex-wrap: nowrap;
     }
 
     .create-entities a {
         padding: 5px 10px;
+        margin: 5px;
 
         color: var(--secondary-color-text);
         font-size: 18px;
@@ -785,15 +789,14 @@ and (max-device-width : 768px) {
         display: flex; 
         flex-direction: column; 
         border-radius: 4px;
-        box-shadow: var(--shadow);
     }
 
     .table-item {
-        padding: 0.75rem 0;
+        /* padding: 0.75rem 0; */
         font-size: var(--font-size-p);
         color: var(--secondary-color-text);
 
-        flex: 1;
+        /* flex: 1; */
     }
 
     .row-unique {
@@ -836,7 +839,6 @@ and (max-device-width : 768px) {
         background-color: var(--secondary-background);
 
         position: relative;
-        box-shadow: var(--shadow);
     }
 
     .table-section {
@@ -947,9 +949,15 @@ and (max-device-width : 768px) {
 
 }
 
-/****************************** Phone ******************************/
-/*******************************************************************/
+/************************************************************ Phone ************************************************************/
+/*******************************************************************************************************************************/
 @media only screen
 and (max-device-width : 480px) {
 
+    /************************ HomePage ************************/
+    /**********************************************************/
+    .create-entities {
+        justify-content:space-evenly;
+        flex-wrap: wrap;
+    }
 }
